# EcoPulse_training

./: .gitattributes  convertionData.bash  pyproject.toml
data/: bird.py  ecopulse_esc50.csv  ecopulse_esc50_fsd50k.csv  ecopulse_esc50_yamnet_soft.csv
data/7072196/: README.txt
data/bird_hf_cache/: README.md  split_metadata.csv
models/: README.md  ecopulse_cnn.keras  ecopulse_cnn_best.keras  ecopulse_cnn_int8.tflite  ecopulse_esc50_best.keras  ecopulse_esc50_distilled.keras  ecopulse_esc50_final.keras
models/classic/: ecopulse_cnn.keras  ecopulse_cnn_best.keras  labels.json
models/quantize/: ecopulse_cnn_int8.tflite
models/quantized/: ecopulse_cnn_int8.tflite
src/: evaluate.py  export_tflite.py  model_data.py  prepare_esc50.py  train_esc50.py
src/bigDataTrain/: README.md  audio_features.py  build_dataset.py  check_audio.py  check_dataset.py  check_dataset2.py  config.py  evaluate_model.py  label_mapping.py  resample_audio.py  train_model.py
src/distillation/: evaluate_distill.py  generate_yamnet_soft_labels.py  lebelTest.py  train_esc50_distill.py
