[project]
name = "ecopulse"
version = "0.1.0"
description = ""
authors = [
    {name = "stadiello",email = "tadiello.sebastien@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "tensorflow==2.16.2; platform_system != 'Darwin' or platform_machine != 'arm64'",
    "tensorflow-macos==2.16.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorflow-metal>=1.2.0,<2.0.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow-hub (>=0.16.1,<0.17.0)",
    "datasets (>=5.0.0,<6.0.0)",
    "soundfile (>=0.14.0,<0.15.0)",
    "huggingface-hub (>=1.21.0,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)"
]

[tool.poetry]
packages = [{include = "ecopulse", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
